hw5/punygram.output
Terminals which are not used

   LAMBDA


State 2 conflicts: 1 shift/reduce
State 25 conflicts: 2 shift/reduce
State 106 conflicts: 1 shift/reduce
State 178 conflicts: 1 shift/reduce
State 193 conflicts: 1 shift/reduce
State 321 conflicts: 1 shift/reduce
State 366 conflicts: 1 shift/reduce
State 374 conflicts: 1 shift/reduce
State 378 conflicts: 1 shift/reduce
State 380 conflicts: 1 shift/reduce
State 418 conflicts: 1 shift/reduce
State 422 conflicts: 1 shift/reduce
State 427 conflicts: 1 shift/reduce
State 448 conflicts: 1 shift/reduce
State 461 conflicts: 1 shift/reduce
State 472 conflicts: 1 shift/reduce


Grammar

    0 $accept: file_input $end

    1 file_input: zero_more_newline_stmt ENDMARKER

    2 zero_more_newline_stmt: /* empty */
    3                       | zero_more_newline_stmt newline_stmt

    4 newline_stmt: NEWLINE
    5             | stmt

    6 funcdef: DEF NAME parameters opt_rarrowtest COLON func_body_suite

    7 opt_rarrowtest: /* empty */
    8               | RARROW test

    9 parameters: LPAR argumentstd RPAR

   10 argumentstd: argumenttd zero_more_comma_argtd

   11 zero_more_comma_argtd: /* empty */
   12                      | zero_more_comma_argtd comma_argstd

   13 comma_argstd: COMMA argumenttd

   14 argumenttd: tfdef opt_eq_test

   15 tfdef: /* empty */
   16      | NAME opt_col_test

   17 opt_col_test: /* empty */
   18             | COLON test

   19 stmt: simple_stmt
   20     | compound_stmt
   21     | weird_buggy_thing

   22 weird_buggy_thing: DEDENT one_more_newline INDENT

   23 one_more_newline: NEWLINE
   24                 | one_more_newline NEWLINE

   25 simple_stmt: small_or_null zero_more_stmts opt_semi_colon NEWLINE

   26 zero_more_stmts: /* empty */
   27                | zero_more_stmts single_stmt

   28 single_stmt: SEMI small_stmt

   29 small_or_null: /* empty */
   30              | small_stmt

   31 small_stmt: expr_stmt
   32           | del_stmt
   33           | pass_stmt
   34           | flow_stmt
   35           | import_stmt
   36           | global_stmt
   37           | nonlocal_stmt
   38           | assert_stmt

   39 expr_stmt: testlist_star_expr everything_in_parenthesis

   40 everything_in_parenthesis: annassign
   41                          | augassign yield_or_testlist
   42                          | opt_eq_yeild__tc

   43 yield_or_testlist: yield_expr
   44                  | testlist

   45 opt_eq_yeild__tc: /* empty */
   46                 | one_or_more_eq_yield_or_tlse opt_type_comment

   47 one_or_more_eq_yield_or_tlse: eq_yield_or_tlse
   48                             | one_or_more_eq_yield_or_tlse eq_yield_or_tlse

   49 annassign: COLON test opt_eq_yeild_or_tlse

   50 opt_eq_yeild_or_tlse: /* empty */
   51                     | eq_yield_or_tlse

   52 eq_yield_or_tlse: EQUAL yield_or_tlse

   53 yield_or_tlse: yield_expr
   54              | testlist_star_expr

   55 testlist_star_expr: test_or_se zero_more_comma_test_or_se opt_comma

   56 zero_more_comma_test_or_se: /* empty */
   57                           | zero_more_comma_test_or_se comma_test_or_se

   58 comma_test_or_se: COMMA test_or_se

   59 test_or_se: test
   60           | star_expr

   61 augassign: PLUSEQUAL
   62          | MINEQUAL
   63          | STAREQUAL
   64          | SLASHEQUAL
   65          | PERCENTEQUAL
   66          | DOUBLESLASHEQUAL
   67          | DOUBLESTAREQUAL

   68 del_stmt: DEL exprlist

   69 pass_stmt: PASS

   70 flow_stmt: break_stmt
   71          | continue_stmt
   72          | return_stmt
   73          | raise_stmt
   74          | yield_stmt

   75 break_stmt: BREAK

   76 continue_stmt: CONTINUE

   77 return_stmt: RETURN opt_tse

   78 opt_tse: /* empty */
   79        | testlist_star_expr

   80 yield_stmt: yield_expr

   81 raise_stmt: RAISE opt_test_opt_from_test

   82 opt_test_opt_from_test: /* empty */
   83                       | test opt_from_test

   84 opt_from_test: /* empty */
   85              | FROM test

   86 import_stmt: import_name
   87            | import_from

   88 import_name: IMPORT dotted_as_names

   89 import_from: FROM dot_ellip_dn_or_one_more_dot_ellip IMPORT star_or_names

   90 dot_ellip_dn_or_one_more_dot_ellip: zero_more_dot_or_ellip dotted_name
   91                                   | one_more_dot_or_ellip

   92 zero_more_dot_or_ellip: /* empty */
   93                       | zero_more_dot_or_ellip dot_or_ellip

   94 one_more_dot_or_ellip: dot_or_ellip
   95                      | one_more_dot_or_ellip dot_or_ellip

   96 dot_or_ellip: DOT
   97             | ELLIPSIS

   98 star_or_names: STAR
   99              | LPAR import_as_names RPAR
  100              | import_as_names

  101 import_as_name: NAME opt_as_name

  102 dotted_as_name: dotted_name opt_as_name

  103 import_as_names: import_as_name zero_more_comma_isn opt_comma

  104 zero_more_comma_isn: /* empty */
  105                    | zero_more_comma_isn comma_isn

  106 comma_isn: COMMA import_as_name

  107 dotted_as_names: dotted_as_name zero_more_dsn

  108 zero_more_dsn: /* empty */
  109              | zero_more_dsn comma_dsn

  110 comma_dsn: COMMA dotted_as_name

  111 dotted_name: NAME zero_more_dot_name

  112 global_stmt: GLOBAL NAME zero_more_comma_name

  113 nonlocal_stmt: NONLOCAL NAME zero_more_comma_name

  114 assert_stmt: ASSERT test opt_comma_test

  115 compound_stmt: if_stmt
  116              | while_stmt
  117              | for_stmt
  118              | try_stmt
  119              | with_stmt
  120              | funcdef
  121              | classdef

  122 if_stmt: IF namedexpr_test COLON suite zero_more_elif opt_else

  123 zero_more_elif: /* empty */
  124               | zero_more_elif elif

  125 elif: ELIF namedexpr_test COLON suite

  126 while_stmt: WHILE namedexpr_test COLON suite opt_else

  127 for_stmt: FOR exprlist IN testlist COLON opt_type_comment suite opt_else

  128 try_stmt: TRY COLON suite except_else_or_finally

  129 except_else_or_finally: one_more_except opt_else opt_finally
  130                       | FINALLY COLON suite

  131 opt_finally: /* empty */
  132            | FINALLY COLON suite

  133 one_more_except: except_stmt
  134                | one_more_except except_stmt

  135 except_stmt: except_clause COLON suite

  136 with_stmt: WITH with_item zero_more_comma_with_item COLON opt_type_comment suite

  137 zero_more_comma_with_item: /* empty */
  138                          | zero_more_comma_with_item comma_with_item

  139 comma_with_item: COMMA with_item

  140 with_item: test opt_as_expr

  141 except_clause: EXCEPT opt_test_as_name

  142 opt_test_as_name: test opt_as_name

  143 suite: simple_stmt
  144      | NEWLINE INDENT one_more_stmt DEDENT

  145 one_more_stmt: stmt
  146              | one_more_stmt stmt

  147 namedexpr_test: test opt_coleq_test

  148 opt_coleq_test: /* empty */
  149               | COLONEQUAL test

  150 test: or_test opt_if_else

  151 opt_if_else: /* empty */
  152            | IF or_test ELSE test

  153 test_nocond: or_test

  154 or_test: and_test zero_more_or_and_test

  155 zero_more_or_and_test: /* empty */
  156                      | zero_more_or_and_test or_and_test

  157 or_and_test: OR and_test

  158 and_test: not_test zero_more_and_not_test

  159 zero_more_and_not_test: /* empty */
  160                       | zero_more_and_not_test not_and_test

  161 not_and_test: AND not_test

  162 not_test: NOT not_test
  163         | comparison

  164 comparison: expr zero_more_comp_op_expr

  165 zero_more_comp_op_expr: /* empty */
  166                       | zero_more_comp_op_expr comp_op_expr

  167 comp_op_expr: comp_op expr

  168 comp_op: LESS
  169        | GREATER
  170        | EQEQUAL
  171        | LESSEQUAL
  172        | GREATEREQUAL
  173        | NOTEQUAL
  174        | NOT
  175        | IN

  176 star_expr: STAR expr

  177 expr: xor_expr zero_more_or_xor_expr

  178 zero_more_or_xor_expr: /* empty */
  179                      | zero_more_or_xor_expr or_xor_expr

  180 or_xor_expr: "|" xor_expr

  181 xor_expr: and_expr zero_more_carrot_and_expr

  182 zero_more_carrot_and_expr: /* empty */
  183                          | zero_more_carrot_and_expr carrot_and_expr

  184 carrot_and_expr: "^" and_expr

  185 and_expr: shift_expr zero_more_and_shift

  186 zero_more_and_shift: /* empty */
  187                    | zero_more_and_shift and_shift

  188 and_shift: "$" shift_expr

  189 shift_expr: arith_expr zero_more_double_arrow_arith

  190 zero_more_double_arrow_arith: /* empty */
  191                             | zero_more_double_arrow_arith double_arrow_arith

  192 double_arrow_arith: left_or_right arith_expr

  193 left_or_right: "<<"
  194              | ">>"

  195 arith_expr: term zero_more_plus_minus_term

  196 zero_more_plus_minus_term: /* empty */
  197                          | zero_more_plus_minus_term plus_minus_term

  198 plus_minus_term: plus_or_minus term

  199 term: factor zero_more_factor

  200 zero_more_factor: /* empty */
  201                 | zero_more_factor symbols_factor

  202 symbols_factor: symbols_f factor

  203 symbols_f: STAR
  204          | SLASH
  205          | PERCENT
  206          | DOUBLESLASH

  207 factor: plus_or_minus factor
  208       | power

  209 power: atom_expr opt_doublestar_factor

  210 opt_doublestar_factor: /* empty */
  211                      | DOUBLESTAR factor

  212 atom_expr: atom zero_more_trailer

  213 zero_more_trailer: /* empty */
  214                  | zero_more_trailer trailer

  215 atom: LPAR opt_yield_tlc RPAR
  216     | LSQB testlist_comp RSQB
  217     | LBRACE opt_dictsetmarker RBRACE
  218     | NAME
  219     | NUMBER
  220     | one_more_string
  221     | ELLIPSIS
  222     | NONE
  223     | TRUE
  224     | FALSE
  225     | FUNC

  226 opt_yield_tlc: testlist_comp
  227              | yield_expr

  228 opt_dictsetmarker: /* empty */
  229                  | dictorsetmarker

  230 one_more_string: STRING
  231                | one_more_string STRING

  232 testlist_comp: /* empty */
  233              | namedexpr_or_star_expr comp_for_multiple

  234 comp_for_multiple: comp_for
  235                  | zero_more_comma_nt_or_se opt_comma

  236 zero_more_comma_nt_or_se: /* empty */
  237                         | zero_more_comma_nt_or_se comma_nt_or_se

  238 comma_nt_or_se: COMMA namedexpr_or_star_expr

  239 namedexpr_or_star_expr: namedexpr_test
  240                       | star_expr

  241 trailer: LPAR opt_arglist RPAR
  242        | LSQB subscriptlist RSQB
  243        | DOT NAME

  244 opt_arglist: /* empty */
  245            | arglist

  246 subscriptlist: subscript zero_more_comma_sub opt_comma

  247 zero_more_comma_sub: /* empty */
  248                    | zero_more_comma_sub comma_sub

  249 comma_sub: COMMA subscript

  250 subscript: test
  251          | opt_test COLON opt_test opt_slicop

  252 opt_slicop: /* empty */
  253           | sliceop

  254 sliceop: COLON opt_test

  255 exprlist: expr_or_starexpr zero_more_comma_expr_or_se opt_comma

  256 zero_more_comma_expr_or_se: /* empty */
  257                           | zero_more_comma_expr_or_se comma_expr_or_se

  258 comma_expr_or_se: COMMA expr_or_starexpr

  259 expr_or_starexpr: expr
  260                 | star_expr

  261 testlist: test zero_more_comma_test opt_comma

  262 zero_more_comma_test: /* empty */
  263                     | zero_more_comma_test comma_test

  264 comma_test: COMMA test

  265 dictorsetmarker: dict_set_maker

  266 dict_set_maker: dsm_expr
  267               | dsm_star_expr

  268 dsm_expr: tct_or_dse cf_or_comma_tct_dct

  269 tct_or_dse: test COLON test
  270           | DOUBLESTAR expr

  271 zero_more_comma_tct_or_dse: /* empty */
  272                           | zero_more_comma_tct_or_dse COMMA tct_or_dse

  273 cf_or_comma_tct_dct: comp_for
  274                    | zero_more_comma_tct_or_dse opt_comma

  275 dsm_star_expr: test_or_se cf_or_comma_tse

  276 cf_or_comma_tse: comp_for
  277                | zero_more_comma_test_or_se opt_comma

  278 classdef: CLASS NAME opt_lpar_arglist_rpar COLON suite

  279 opt_lpar_arglist_rpar: /* empty */
  280                      | LPAR opt_arglist RPAR

  281 arglist: argument zero_more_comma_arguments opt_comma

  282 zero_more_comma_arguments: /* empty */
  283                          | zero_more_comma_arguments COMMA argument

  284 argument: test opt_comp_for
  285         | test COLONEQUAL test
  286         | test EQUAL test
  287         | DOUBLESTAR test
  288         | STAR test

  289 opt_comp_for: /* empty */
  290             | comp_for

  291 comp_iter: comp_for
  292          | comp_if

  293 sync_comp_for: FOR exprlist IN or_test opt_comp_iter

  294 comp_for: sync_comp_for

  295 comp_if: IF test_nocond opt_comp_iter

  296 opt_comp_iter: /* empty */
  297              | comp_iter

  298 yield_expr: YIELD opt_yield_args

  299 opt_yield_args: /* empty */
  300               | yield_args

  301 yield_args: FROM test
  302           | testlist_star_expr

  303 func_body_suite: simple_stmt
  304                | NEWLINE opt_type_comment_newline INDENT one_more_stmt DEDENT

  305 opt_type_comment_newline: /* empty */
  306                         | TYPE_COMMENT NEWLINE

  307 opt_comma: /* empty */
  308          | COMMA

  309 opt_type_comment: /* empty */
  310                 | TYPE_COMMENT

  311 opt_eq_test: /* empty */
  312            | EQUAL test

  313 opt_as_name: /* empty */
  314            | AS NAME

  315 zero_more_comma_name: /* empty */
  316                     | zero_more_comma_name comma_name

  317 comma_name: COMMA NAME

  318 zero_more_dot_name: /* empty */
  319                   | zero_more_dot_name dot_name

  320 dot_name: DOT NAME

  321 opt_comma_test: /* empty */
  322               | COMMA test

  323 opt_else: /* empty */
  324         | ELSE COLON suite

  325 opt_as_expr: /* empty */
  326            | AS expr

  327 plus_or_minus: PLUS
  328              | MINUS

  329 opt_test: /* empty */
  330         | test

  331 opt_semi_colon: /* empty */
  332               | SEMI


Terminals, with rules where they appear

$end (0) 0
error (256)
ENDMARKER (258) 1
NEWLINE (259) 4 23 24 25 144 304 306
FALSE (260) 224
IF (261) 122 152 295
DEF (262) 6
RAISE (263) 81
NONE (264) 222
DEL (265) 68
IMPORT (266) 88 89
RETURN (267) 77
TRUE (268) 223
ELIF (269) 125
TRY (270) 128
AND (271) 161
ELSE (272) 152 324
WHILE (273) 126
AS (274) 314 326
EXCEPT (275) 141
LAMBDA (276)
WITH (277) 136
ASSERT (278) 114
FINALLY (279) 130 132
NONLOCAL (280) 113
YIELD (281) 298
BREAK (282) 75
FOR (283) 127 293
NOT (284) 162 174
CLASS (285) 278
FROM (286) 85 89 301
OR (287) 157
CONTINUE (288) 76
GLOBAL (289) 112
PASS (290) 69
LPAR (291) 9 99 215 241 280
RPAR (292) 9 99 215 241 280
LSQB (293) 216 242
RSQB (294) 216 242
COLON (295) 6 18 49 122 125 126 127 128 130 132 135 136 251 254 269
    278 324
COMMA (296) 13 58 106 110 139 238 249 258 264 272 283 308 317 322
SEMI (297) 28 332
PLUS (298) 327
MINUS (299) 328
STAR (300) 98 176 203 288
SLASH (301) 204
LESS (302) 168
GREATER (303) 169
EQUAL (304) 52 286 312
DOT (305) 96 243 320
PERCENT (306) 205
LBRACE (307) 217
RBRACE (308) 217
EQEQUAL (309) 170
NOTEQUAL (310) 173
LESSEQUAL (311) 171
GREATEREQUAL (312) 172
DOUBLESTAR (313) 211 270 287
PLUSEQUAL (314) 61
MINEQUAL (315) 62
STAREQUAL (316) 63
SLASHEQUAL (317) 64
PERCENTEQUAL (318) 65
DOUBLESTAREQUAL (319) 67
DOUBLESLASH (320) 206
DOUBLESLASHEQUAL (321) 66
RARROW (322) 8
ELLIPSIS (323) 97 221
COLONEQUAL (324) 149 285
NAME (325) 6 16 101 111 112 113 218 243 278 314 317 320
NUMBER (326) 219
STRING (327) 230 231
INDENT (328) 22 144 304
DEDENT (329) 22 144 304
IN (330) 127 175 293
TYPE_COMMENT (331) 306 310
FUNC (332) 225
"|" (333) 180
"^" (334) 184
"$" (335) 188
"<<" (336) 193
">>" (337) 194


Nonterminals, with rules where they appear

$accept (83)
    on left: 0
file_input (84)
    on left: 1, on right: 0
zero_more_newline_stmt (85)
    on left: 2 3, on right: 1 3
newline_stmt (86)
    on left: 4 5, on right: 3
funcdef (87)
    on left: 6, on right: 120
opt_rarrowtest (88)
    on left: 7 8, on right: 6
parameters (89)
    on left: 9, on right: 6
argumentstd (90)
    on left: 10, on right: 9
zero_more_comma_argtd (91)
    on left: 11 12, on right: 10 12
comma_argstd (92)
    on left: 13, on right: 12
argumenttd (93)
    on left: 14, on right: 10 13
tfdef (94)
    on left: 15 16, on right: 14
opt_col_test (95)
    on left: 17 18, on right: 16
stmt (96)
    on left: 19 20 21, on right: 5 145 146
weird_buggy_thing (97)
    on left: 22, on right: 21
one_more_newline (98)
    on left: 23 24, on right: 22 24
simple_stmt (99)
    on left: 25, on right: 19 143 303
zero_more_stmts (100)
    on left: 26 27, on right: 25 27
single_stmt (101)
    on left: 28, on right: 27
small_or_null (102)
    on left: 29 30, on right: 25
small_stmt (103)
    on left: 31 32 33 34 35 36 37 38, on right: 28 30
expr_stmt (104)
    on left: 39, on right: 31
everything_in_parenthesis (105)
    on left: 40 41 42, on right: 39
yield_or_testlist (106)
    on left: 43 44, on right: 41
opt_eq_yeild__tc (107)
    on left: 45 46, on right: 42
one_or_more_eq_yield_or_tlse (108)
    on left: 47 48, on right: 46 48
annassign (109)
    on left: 49, on right: 40
opt_eq_yeild_or_tlse (110)
    on left: 50 51, on right: 49
eq_yield_or_tlse (111)
    on left: 52, on right: 47 48 51
yield_or_tlse (112)
    on left: 53 54, on right: 52
testlist_star_expr (113)
    on left: 55, on right: 39 54 79 302
zero_more_comma_test_or_se (114)
    on left: 56 57, on right: 55 57 277
comma_test_or_se (115)
    on left: 58, on right: 57
test_or_se (116)
    on left: 59 60, on right: 55 58 275
augassign (117)
    on left: 61 62 63 64 65 66 67, on right: 41
del_stmt (118)
    on left: 68, on right: 32
pass_stmt (119)
    on left: 69, on right: 33
flow_stmt (120)
    on left: 70 71 72 73 74, on right: 34
break_stmt (121)
    on left: 75, on right: 70
continue_stmt (122)
    on left: 76, on right: 71
return_stmt (123)
    on left: 77, on right: 72
opt_tse (124)
    on left: 78 79, on right: 77
yield_stmt (125)
    on left: 80, on right: 74
raise_stmt (126)
    on left: 81, on right: 73
opt_test_opt_from_test (127)
    on left: 82 83, on right: 81
opt_from_test (128)
    on left: 84 85, on right: 83
import_stmt (129)
    on left: 86 87, on right: 35
import_name (130)
    on left: 88, on right: 86
import_from (131)
    on left: 89, on right: 87
dot_ellip_dn_or_one_more_dot_ellip (132)
    on left: 90 91, on right: 89
zero_more_dot_or_ellip (133)
    on left: 92 93, on right: 90 93
one_more_dot_or_ellip (134)
    on left: 94 95, on right: 91 95
dot_or_ellip (135)
    on left: 96 97, on right: 93 94 95
star_or_names (136)
    on left: 98 99 100, on right: 89
import_as_name (137)
    on left: 101, on right: 103 106
dotted_as_name (138)
    on left: 102, on right: 107 110
import_as_names (139)
    on left: 103, on right: 99 100
zero_more_comma_isn (140)
    on left: 104 105, on right: 103 105
comma_isn (141)
    on left: 106, on right: 105
dotted_as_names (142)
    on left: 107, on right: 88
zero_more_dsn (143)
    on left: 108 109, on right: 107 109
comma_dsn (144)
    on left: 110, on right: 109
dotted_name (145)
    on left: 111, on right: 90 102
global_stmt (146)
    on left: 112, on right: 36
nonlocal_stmt (147)
    on left: 113, on right: 37
assert_stmt (148)
    on left: 114, on right: 38
compound_stmt (149)
    on left: 115 116 117 118 119 120 121, on right: 20
if_stmt (150)
    on left: 122, on right: 115
zero_more_elif (151)
    on left: 123 124, on right: 122 124
elif (152)
    on left: 125, on right: 124
while_stmt (153)
    on left: 126, on right: 116
for_stmt (154)
    on left: 127, on right: 117
try_stmt (155)
    on left: 128, on right: 118
except_else_or_finally (156)
    on left: 129 130, on right: 128
opt_finally (157)
    on left: 131 132, on right: 129
one_more_except (158)
    on left: 133 134, on right: 129 134
except_stmt (159)
    on left: 135, on right: 133 134
with_stmt (160)
    on left: 136, on right: 119
zero_more_comma_with_item (161)
    on left: 137 138, on right: 136 138
comma_with_item (162)
    on left: 139, on right: 138
with_item (163)
    on left: 140, on right: 136 139
except_clause (164)
    on left: 141, on right: 135
opt_test_as_name (165)
    on left: 142, on right: 141
suite (166)
    on left: 143 144, on right: 122 125 126 127 128 130 132 135 136
    278 324
one_more_stmt (167)
    on left: 145 146, on right: 144 146 304
namedexpr_test (168)
    on left: 147, on right: 122 125 126 239
opt_coleq_test (169)
    on left: 148 149, on right: 147
test (170)
    on left: 150, on right: 8 18 49 59 83 85 114 140 142 147 149 152
    250 261 264 269 284 285 286 287 288 301 312 322 330
opt_if_else (171)
    on left: 151 152, on right: 150
test_nocond (172)
    on left: 153, on right: 295
or_test (173)
    on left: 154, on right: 150 152 153 293
zero_more_or_and_test (174)
    on left: 155 156, on right: 154 156
or_and_test (175)
    on left: 157, on right: 156
and_test (176)
    on left: 158, on right: 154 157
zero_more_and_not_test (177)
    on left: 159 160, on right: 158 160
not_and_test (178)
    on left: 161, on right: 160
not_test (179)
    on left: 162 163, on right: 158 161 162
comparison (180)
    on left: 164, on right: 163
zero_more_comp_op_expr (181)
    on left: 165 166, on right: 164 166
comp_op_expr (182)
    on left: 167, on right: 166
comp_op (183)
    on left: 168 169 170 171 172 173 174 175, on right: 167
star_expr (184)
    on left: 176, on right: 60 240 260
expr (185)
    on left: 177, on right: 164 167 176 259 270 326
zero_more_or_xor_expr (186)
    on left: 178 179, on right: 177 179
or_xor_expr (187)
    on left: 180, on right: 179
xor_expr (188)
    on left: 181, on right: 177 180
zero_more_carrot_and_expr (189)
    on left: 182 183, on right: 181 183
carrot_and_expr (190)
    on left: 184, on right: 183
and_expr (191)
    on left: 185, on right: 181 184
zero_more_and_shift (192)
    on left: 186 187, on right: 185 187
and_shift (193)
    on left: 188, on right: 187
shift_expr (194)
    on left: 189, on right: 185 188
zero_more_double_arrow_arith (195)
    on left: 190 191, on right: 189 191
double_arrow_arith (196)
    on left: 192, on right: 191
left_or_right (197)
    on left: 193 194, on right: 192
arith_expr (198)
    on left: 195, on right: 189 192
zero_more_plus_minus_term (199)
    on left: 196 197, on right: 195 197
plus_minus_term (200)
    on left: 198, on right: 197
term (201)
    on left: 199, on right: 195 198
zero_more_factor (202)
    on left: 200 201, on right: 199 201
symbols_factor (203)
    on left: 202, on right: 201
symbols_f (204)
    on left: 203 204 205 206, on right: 202
factor (205)
    on left: 207 208, on right: 199 202 207 211
power (206)
    on left: 209, on right: 208
opt_doublestar_factor (207)
    on left: 210 211, on right: 209
atom_expr (208)
    on left: 212, on right: 209
zero_more_trailer (209)
    on left: 213 214, on right: 212 214
atom (210)
    on left: 215 216 217 218 219 220 221 222 223 224 225,
    on right: 212
opt_yield_tlc (211)
    on left: 226 227, on right: 215
opt_dictsetmarker (212)
    on left: 228 229, on right: 217
one_more_string (213)
    on left: 230 231, on right: 220 231
testlist_comp (214)
    on left: 232 233, on right: 216 226
comp_for_multiple (215)
    on left: 234 235, on right: 233
zero_more_comma_nt_or_se (216)
    on left: 236 237, on right: 235 237
comma_nt_or_se (217)
    on left: 238, on right: 237
namedexpr_or_star_expr (218)
    on left: 239 240, on right: 233 238
trailer (219)
    on left: 241 242 243, on right: 214
opt_arglist (220)
    on left: 244 245, on right: 241 280
subscriptlist (221)
    on left: 246, on right: 242
zero_more_comma_sub (222)
    on left: 247 248, on right: 246 248
comma_sub (223)
    on left: 249, on right: 248
subscript (224)
    on left: 250 251, on right: 246 249
opt_slicop (225)
    on left: 252 253, on right: 251
sliceop (226)
    on left: 254, on right: 253
exprlist (227)
    on left: 255, on right: 68 127 293
zero_more_comma_expr_or_se (228)
    on left: 256 257, on right: 255 257
comma_expr_or_se (229)
    on left: 258, on right: 257
expr_or_starexpr (230)
    on left: 259 260, on right: 255 258
testlist (231)
    on left: 261, on right: 44 127
zero_more_comma_test (232)
    on left: 262 263, on right: 261 263
comma_test (233)
    on left: 264, on right: 263
dictorsetmarker (234)
    on left: 265, on right: 229
dict_set_maker (235)
    on left: 266 267, on right: 265
dsm_expr (236)
    on left: 268, on right: 266
tct_or_dse (237)
    on left: 269 270, on right: 268 272
zero_more_comma_tct_or_dse (238)
    on left: 271 272, on right: 272 274
cf_or_comma_tct_dct (239)
    on left: 273 274, on right: 268
dsm_star_expr (240)
    on left: 275, on right: 267
cf_or_comma_tse (241)
    on left: 276 277, on right: 275
classdef (242)
    on left: 278, on right: 121
opt_lpar_arglist_rpar (243)
    on left: 279 280, on right: 278
arglist (244)
    on left: 281, on right: 245
zero_more_comma_arguments (245)
    on left: 282 283, on right: 281 283
argument (246)
    on left: 284 285 286 287 288, on right: 281 283
opt_comp_for (247)
    on left: 289 290, on right: 284
comp_iter (248)
    on left: 291 292, on right: 297
sync_comp_for (249)
    on left: 293, on right: 294
comp_for (250)
    on left: 294, on right: 234 273 276 290 291
comp_if (251)
    on left: 295, on right: 292
opt_comp_iter (252)
    on left: 296 297, on right: 293 295
yield_expr (253)
    on left: 298, on right: 43 53 80 227
opt_yield_args (254)
    on left: 299 300, on right: 298
yield_args (255)
    on left: 301 302, on right: 300
func_body_suite (256)
    on left: 303 304, on right: 6
opt_type_comment_newline (257)
    on left: 305 306, on right: 304
opt_comma (258)
    on left: 307 308, on right: 55 103 235 246 255 261 274 277 281
opt_type_comment (259)
    on left: 309 310, on right: 46 127 136
opt_eq_test (260)
    on left: 311 312, on right: 14
opt_as_name (261)
    on left: 313 314, on right: 101 102 142
zero_more_comma_name (262)
    on left: 315 316, on right: 112 113 316
comma_name (263)
    on left: 317, on right: 316
zero_more_dot_name (264)
    on left: 318 319, on right: 111 319
dot_name (265)
    on left: 320, on right: 319
opt_comma_test (266)
    on left: 321 322, on right: 114
opt_else (267)
    on left: 323 324, on right: 122 126 127 129
opt_as_expr (268)
    on left: 325 326, on right: 140
plus_or_minus (269)
    on left: 327 328, on right: 198 207
opt_test (270)
    on left: 329 330, on right: 251 254
opt_semi_colon (271)
    on left: 331 332, on right: 25


state 0

    0 $accept: . file_input $end

    $default  reduce using rule 2 (zero_more_newline_stmt)

    file_input              go to state 1
    zero_more_newline_stmt  go to state 2


state 1

    0 $accept: file_input . $end

    $end  shift, and go to state 3


state 2

    1 file_input: zero_more_newline_stmt . ENDMARKER
    3 zero_more_newline_stmt: zero_more_newline_stmt . newline_stmt

    ENDMARKER  shift, and go to state 4
    NEWLINE    shift, and go to state 5
    FALSE      shift, and go to state 6
    IF         shift, and go to state 7
    DEF        shift, and go to state 8
    RAISE      shift, and go to state 9
    NONE       shift, and go to state 10
    DEL        shift, and go to state 11
    IMPORT     shift, and go to state 12
    RETURN     shift, and go to state 13
    TRUE       shift, and go to state 14
    TRY        shift, and go to state 15
    WHILE      shift, and go to state 16
    WITH       shift, and go to state 17
    ASSERT     shift, and go to state 18
    NONLOCAL   shift, and go to state 19
    YIELD      shift, and go to state 20
    BREAK      shift, and go to state 21
    FOR        shift, and go to state 22
    NOT        shift, and go to state 23
    CLASS      shift, and go to state 24
    FROM       shift, and go to state 25
    CONTINUE   shift, and go to state 26
    GLOBAL     shift, and go to state 27
    PASS       shift, and go to state 28
    LPAR       shift, and go to state 29
    LSQB       shift, and go to state 30
    PLUS       shift, and go to state 31
    MINUS      shift, and go to state 32
    STAR       shift, and go to state 33
    LBRACE     shift, and go to state 34
    ELLIPSIS   shift, and go to state 35
    NAME       shift, and go to state 36
    NUMBER     shift, and go to state 37
    STRING     shift, and go to state 38
    DEDENT     shift, and go to state 39
    FUNC       shift, and go to state 40

    NEWLINE   [reduce using rule 29 (small_or_null)]
    $default  reduce using rule 29 (small_or_null)

    newline_stmt        go to state 41
    funcdef             go to state 42
    stmt                go to state 43
    weird_buggy_thing   go to state 44
    simple_stmt         go to state 45
    small_or_null       go to state 46
    small_stmt          go to state 47
    expr_stmt           go to state 48
    testlist_star_expr  go to state 49
    test_or_se          go to state 50
    del_stmt            go to state 51
    pass_stmt           go to state 52
    flow_stmt           go to state 53
    break_stmt          go to state 54
    continue_stmt       go to state 55
    return_stmt         go to state 56
    yield_stmt          go to state 57
    raise_stmt          go to state 58
    import_stmt         go to state 59
    import_name         go to state 60
    import_from         go to state 61
    global_stmt         go to state 62
    nonlocal_stmt       go to state 63
    assert_stmt         go to state 64
    compound_stmt       go to state 65
    if_stmt             go to state 66
    while_stmt          go to state 67
    for_stmt            go to state 68
    try_stmt            go to state 69
    with_stmt           go to state 70
    test                go to state 71
    or_test             go to state 72
    and_test            go to state 73
    not_test            go to state 74
    comparison          go to state 75
    star_expr           go to state 76
    expr                go to state 77
    xor_expr            go to state 78
    and_expr            go to state 79
    shift_expr          go to state 80
    arith_expr          go to state 81
    term                go to state 82
    factor              go to state 83
    power               go to state 84
    atom_expr           go to state 85
    atom                go to state 86
    one_more_string     go to state 87
    classdef            go to state 88
    yield_expr          go to state 89
    plus_or_minus       go to state 90


state 3

    0 $accept: file_input $end .

    $default  accept


state 4

    1 file_input: zero_more_newline_stmt ENDMARKER .

    $default  reduce using rule 1 (file_input)


state 5

    4 newline_stmt: NEWLINE .

    $default  reduce using rule 4 (newline_stmt)


state 6

  224 atom: FALSE .

    $default  reduce using rule 224 (atom)


state 7

  122 if_stmt: IF . namedexpr_test COLON suite zero_more_elif opt_else

    FALSE     shift, and go to state 6
    NONE      shift, and go to state 10
    TRUE      shift, and go to state 14
    NOT       shift, and go to state 23
    LPAR      shift, and go to state 29
    LSQB      shift, and go to state 30
    PLUS      shift, and go to state 31
    MINUS     shift, and go to state 32
    LBRACE    shift, and go to state 34
    ELLIPSIS  shift, and go to state 35
    NAME      shift, and go to state 36
    NUMBER    shift, and go to state 37
    STRING    shift, and go to state 38
    FUNC      shift, and go to state 40

    namedexpr_test   go to state 91
    test             go to state 92
    or_test          go to state 72
    and_test         go to state 73
    not_test         go to state 74
    comparison       go to state 75
    expr             go to state 77
    xor_expr         go to state 78
    and_expr         go to state 79
    shift_expr       go to state 80
    arith_expr       go to state 81
    term             go to state 82
    factor           go to state 83
    power            go to state 84
    atom_expr        go to state 85
    atom             go to state 86
    one_more_string  go to state 87
    plus_or_minus    go to state 90


state 8

    6 funcdef: DEF . NAME parameters opt_rarrowtest COLON func_body_suite

    NAME  shift, and go to state 93


state 9

   81 raise_stmt: RAISE . opt_test_opt_from_test
